objects/Error_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Errors_Reporting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Mistake_Occurred__c</fullName>
        <label>Date Mistake Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mistake_Recorded__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Mistake Recorded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>HR Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Issue__c</fullName>
        <label>Description of Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Admin_Credit__c</fullName>
        <description>This is the amount ProService refunded back to the client due to error or the amount we choose not to bill them over a certain time due to error. If an exact amount was refunded that should be input and not just an estimate.</description>
        <inlineHelpText>This is the amount ProService refunded back to the client due to error or the amount we choose not to bill them over a certain time due to error. If an exact amount was refunded that should be input and not just an estimate.</inlineHelpText>
        <label>Estimated Admin Credit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Taken__c</fullName>
        <label>Follow-Up Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mistake_Impact_Detail__c</fullName>
        <label>Mistake Impact Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mistake_Impact__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Billing Mistake</fullName>
                </value>
                <value>
                    <fullName>Benefit Billing Mistake</fullName>
                </value>
                <value>
                    <fullName>Check Delivery Issue/Mistake</fullName>
                </value>
                <value>
                    <fullName>Deduction Mistake</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit Mistake</fullName>
                </value>
                <value>
                    <fullName>Distribution Room Mistake</fullName>
                </value>
                <value>
                    <fullName>HR/PGS Data Entry Mistake</fullName>
                </value>
                <value>
                    <fullName>Incorrect Paycode(s) Used</fullName>
                </value>
                <value>
                    <fullName>Job Code/WC Classification Mistake</fullName>
                </value>
                <value>
                    <fullName>Other Billing Mistake</fullName>
                </value>
                <value>
                    <fullName>Payroll Data Entry Mistake</fullName>
                </value>
                <value>
                    <fullName>CCH Issue</fullName>
                </value>
                <value>
                    <fullName>UPS Issue</fullName>
                </value>
                <value>
                    <fullName>USPS Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mistake_Impact__c</fullName>
        <label>Mistake Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mistake Affected Employee(s) Pay Only</fullName>
                </value>
                <value>
                    <fullName>Mistake Affected Client Bill Amount Only</fullName>
                </value>
                <value>
                    <fullName>Mistake Affected Employee(s) Pay and Client Bill Amount</fullName>
                </value>
                <value>
                    <fullName>Payroll Not Received as Anticipated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mistake_Status__c</fullName>
        <label>Mistake Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open, Pending STM Review</fullName>
                    <default>true</default>
                    <label>Open, Pending STM Review</label>
                </value>
                <value>
                    <fullName>STM-Reviewed, In-Progress</fullName>
                </value>
                <value>
                    <fullName>STM-Reviewed, Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mistake_Type__c</fullName>
        <description>Oversight Mistake = low intention, good learning opportunity 
We know better, but lost concentration
	
Aha-Moment Mistake = low intention, great learning opportunity 
We lacked knowledge but now have realization
	
High-Stakes Mistake = high intention, good learning opportunity
When results can be catastrophic or “last straw”; CLs on PFK or multiple mistakes lists 
	
Stretch Mistake = high intention, great learning opportunity 
When trying something new/challenging &amp; bound to make error</description>
        <inlineHelpText>Oversight: We know better, but lost concentration
Aha-Moment: We lacked knowledge but now have realization
High-Stakes: Results can be catastrophic; CLs on PFK or multiple mistakes lists 
Stretch: Trying something new/challenging &amp; bound to make errors</inlineHelpText>
        <label>Mistake Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oversight</fullName>
                </value>
                <value>
                    <fullName>Aha-Moment</fullName>
                </value>
                <value>
                    <fullName>High-Stakes</fullName>
                </value>
                <value>
                    <fullName>Stretch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_of_Mistake__c</fullName>
        <label>Origin of Mistake</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>HC Benefits</fullName>
                </value>
                <value>
                    <fullName>HR Associates/PGS</fullName>
                </value>
                <value>
                    <fullName>Implementation/Solution</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Supp Benefits</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Accountable_for_Mistake__c</fullName>
        <inlineHelpText>Enter in the first and last name of each person accountable for the mistake.</inlineHelpText>
        <label>Person Accountable for Mistake</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis_Detail__c</fullName>
        <label>Root Cause Analysis Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Root_Cause_Analysis__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Data Entered Incorrectly / Failed to Audit</fullName>
                </value>
                <value>
                    <fullName>Failed to update system / Reminders</fullName>
                </value>
                <value>
                    <fullName>Instructions Overlooked</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis__c</fullName>
        <label>Root Cause Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oversight</fullName>
                </value>
                <value>
                    <fullName>Inadequate Process</fullName>
                </value>
                <value>
                    <fullName>Insufficient Training</fullName>
                </value>
                <value>
                    <fullName>Poor Communication</fullName>
                </value>
                <value>
                    <fullName>Lost or Missed Paperwork</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_Index__c</fullName>
        <label>Severity Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Minimal</fullName>
                </value>
                <value>
                    <fullName>2 - Minor</fullName>
                </value>
                <value>
                    <fullName>3 - Moderate</fullName>
                </value>
                <value>
                    <fullName>4 - Severe</fullName>
                </value>
                <value>
                    <fullName>5 - Catastrophic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Considerations_on_Creation__c</fullName>
        <label>Special Considerations on Creation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Employees_Impacted__c</fullName>
        <label># of Employees Impacted</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Mistakes Reporting</label>
    <nameField>
        <displayFormat>ERROR-{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>Service Mistakes Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Mistakes Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Number_Impacted_EE_greater_than_equal_1</fullName>
        <active>true</active>
        <description>"# of Employee's Impacted" must be greater than 0</description>
        <errorConditionFormula>of_Employees_Impacted__c  &lt;= 0</errorConditionFormula>
        <errorMessage>"# of Employee's Impacted" must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>